--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             92% { opacity: 0.8; transform: scale(1.2); }
             94%, 100% { opacity: 0; transform: scale(1.5); }
         }
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-8px); }
+            50% { transform: translateX(8px); }
+            75% { transform: translateX(-8px); }
+        }
         .stars-bg {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
@@ -96,6 +102,13 @@
                               radial-gradient(2px 2px at 80px 250px, #3b82f6, rgba(0,0,0,0));
             background-size: 300px 300px;
             opacity: 0.3;
+        }
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 6px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
         }
     </style>
 <script type="importmap">
